# basic-common-crawl-pipeline

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.autometrics  Dockerfile.saver  Dockerfile.worker  compose.yaml
src/: commoncrawl.rs  lib.rs  rabbitmq.rs  tracing_and_metrics.rs  trafilatura.rs  utility.rs
tests/: commoncrawl_tests.rs  utility_tests.rs
